--- a/yatube/templates/includes/comments.html
+++ b/yatube/templates/includes/comments.html
@@ -15,7 +15,7 @@
   </div>
   {% endif %}
 
-{% for item in comments %}
+{% for item in post.comments.all %}
   <div class="media card mb-4">
     <div class="media-body card-body">
       <h5 class="mt-0">
