--- a/yatube/templates/posts/group.html
+++ b/yatube/templates/posts/group.html
@@ -6,7 +6,7 @@
     <main>
       <div class="container py-5">        
         <h1>{{ group.title }}</h1>
-        <p>{{ group.description }}</p>
+        <p>{{ group.description|linebreaksbr }}</p>
         {% for post in page %}
           {% include "includes/post_item.html" with post=post %}
         {% empty %}
